# cmms-django

./: .env.sample  .flake8  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: django.yml
src/buildings/: admin.py  forms.py  models.py  views.py
src/buildings/migrations/: 0001_initial.py
src/homepage/: views.py
src/proj/: context_processors.py  settings.py  urls.py
src/static/css/: bootstrap.min.css  style.css
src/static/js/: app.js  attachments-validation.js  building-delete-mobile.js  dashboard-canvas.js  task-comment-ajax.js  task-delete-decline-mobile.js  task-filter-form.js  toast-messages.js
src/tasks/: admin.py  forms.py  models.py  views.py
src/tasks/migrations/: 0001_initial.py  0002_task_assigned_person_alter_task_attachments_and_more.py  0003_attachment_remove_task_attachments_task_attachments.py  0004_attachment_task.py  0005_remove_attachment_task.py  0006_remove_task_attachments_attachment_task.py  0007_task_status_field.py  0008_remove_task_comments_taskcomment.py  0009_task_created_by.py  0010_alter_task_category.py
src/templates/: base.html  footer.html  generic_form.html  navbar.html  overlay_with_loader.html
src/templates/buildings/: building_create.html  building_list.html  building_update.html
src/templates/homepage/: index.html
src/templates/registration/: first_login_password_change.html  initial_password_email.html  initial_password_subject.txt  login.html  password_change.html  password_change_done.html  password_reset_complete.html  password_reset_confirm.html  (+4 more)
src/tests/: conftest.py
src/users/: admin.py  auth_backends.py  forms.py  managers.py  models.py  views.py
(+20 files in other folders)
